Improve table style on MS Teams - Refactor implementation