@@ -1,7 +1,10 @@
 package org.openmetadata.service.notifications.channels.teams;
 
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.IntStream;
 import org.commonmark.ext.gfm.strikethrough.Strikethrough;
 import org.commonmark.ext.gfm.tables.TableBlock;
 import org.commonmark.ext.gfm.tables.TableBody;
@@ -33,12 +36,18 @@ import org.openmetadata.service.apps.bundles.changeEvent.msteams.TeamsMessage;
 
 final class TeamsCardAssembler extends AbstractVisitor {
   private static final int TEAMS_MAX_TEXT_LENGTH = 5000;
+  private static final TeamsMarkdownFormatter INLINE_FORMATTER = new TeamsMarkdownFormatter();
 
-  List<TeamsMessage.BodyItem> body = new ArrayList<>();
-  StringBuilder currentText = new StringBuilder();
-  boolean inParagraph = false;
-  boolean inList = false;
-  private final TeamsMarkdownFormatter inline = new TeamsMarkdownFormatter();
+  private final List<TeamsMessage.BodyItem> body = new ArrayList<>();
+  private final StringBuilder currentText = new StringBuilder();
+
+  // State tracking
+  private boolean inList = false;
+
+  // Add this method to the end of the TeamsCardAssembler class
+  List<TeamsMessage.BodyItem> getBodyItems() {
+    return new ArrayList<>(body);
+  }
 
   @Override
   public void visit(Document document) {
@@ -46,804 +55,415 @@ final class TeamsCardAssembler extends AbstractVisitor {
     flushCurrentText();
   }
 
-  @Override
-  public void visit(CustomNode node) {
-    if (node instanceof Strikethrough) {
-      visit((Strikethrough) node);
-    } else {
-      super.visit(node);
-    }
-  }
-
-  @Override
-  public void visit(CustomBlock block) {
-    if (block instanceof TableBlock) {
-      visitTable((TableBlock) block);
-    } else {
-      super.visit(block);
-    }
-  }
+  // --- Block Visitors ---
 
   @Override
   public void visit(Heading heading) {
     flushCurrentText();
-    String text = inline.renderInlineChildren(heading).trim();
-    int size = Math.max(1, Math.min(4, heading.getLevel()));
+    String text = INLINE_FORMATTER.renderInlineChildren(heading).trim();
     if (!text.isEmpty()) {
-      body.add(createTextBlock(text, "heading", size, true));
+      int size = Math.max(1, Math.min(4, heading.getLevel()));
+      body.add(createTextBlock(text, "heading", size));
     }
   }
 
   @Override
   public void visit(Paragraph paragraph) {
-    if (!inList) {
-      flushCurrentText();
-    }
-    inParagraph = true;
-    String text = inline.renderInlineChildren(paragraph);
-    if (!text.trim().isEmpty()) {
-      currentText.append(text);
-    }
-    inParagraph = false;
-    if (!inList) {
-      flushCurrentText();
-    }
-  }
-
-  @Override
-  public void visit(Text text) {
-    String literal = text.getLiteral();
-    currentText.append(literal == null ? "" : literal);
-  }
-
-  @Override
-  public void visit(Emphasis emphasis) {
-    currentText.append("*");
-    visitChildren(emphasis);
-    currentText.append("*");
-  }
-
-  @Override
-  public void visit(StrongEmphasis strong) {
-    currentText.append("**");
-    visitChildren(strong);
-    currentText.append("**");
-  }
-
-  @Override
-  public void visit(Code code) {
-    String lit = code.getLiteral();
-    currentText.append("`").append(lit == null ? "" : lit).append("`");
-  }
-
-  @Override
-  public void visit(Link link) {
-    String dest = link.getDestination();
-
-    int before = currentText.length();
-    visitChildren(link);
-    String label = currentText.substring(before).trim();
-    currentText.setLength(before);
-
-    if (!isAllowedLinkUrl(dest)) {
-      if (!label.isEmpty()) currentText.append(escapeMdLabel(label));
-      return;
-    }
-
-    String labelEsc = label.isEmpty() ? escapeMdUrl(dest) : escapeMdLabel(label);
-    String urlEsc = escapeMdUrl(dest);
-    currentText.append("[").append(labelEsc).append("](").append(urlEsc).append(")");
+    if (!inList) flushCurrentText();
+    String text = INLINE_FORMATTER.renderInlineChildren(paragraph);
+    if (!text.isBlank()) currentText.append(text);
+    if (!inList) flushCurrentText();
   }
 
   @Override
   public void visit(BlockQuote blockQuote) {
     flushCurrentText();
+    StringBuilder content = new StringBuilder();
 
-    StringBuilder quotedContent = new StringBuilder();
-
-    // Process each child of the blockquote
     for (Node child = blockQuote.getFirstChild(); child != null; child = child.getNext()) {
-      switch (child) {
-        case Paragraph paragraph -> {
-          String text = inline.renderInlineChildren(child).trim();
-          if (!text.isEmpty()) {
-            quotedContent.append("> ").append(text).append("\n\n");
-          }
-        }
-        case BulletList bulletList -> {
-          StringBuilder listText = new StringBuilder();
-          appendList(listText, child, 0, null);
-          // Prefix each line with "> " for blockquote
-          String[] lines = listText.toString().split("\n");
-          for (String line : lines) {
-            if (!line.trim().isEmpty()) {
-              quotedContent.append("> ").append(line).append("\n");
-            }
-          }
-          quotedContent.append("\n");
-        }
-        case OrderedList orderedList -> {
-          StringBuilder listText = new StringBuilder();
-          appendList(listText, child, 0, orderedList.getMarkerStartNumber());
-          // Prefix each line with "> " for blockquote
-          String[] lines = listText.toString().split("\n");
-          for (String line : lines) {
-            if (!line.trim().isEmpty()) {
-              quotedContent.append("> ").append(line).append("\n");
-            }
-          }
-          quotedContent.append("\n");
-        }
-        default -> {}
+      String childText = renderNodeToText(child);
+      if (!childText.isBlank()) {
+        childText.lines().forEach(line -> content.append("> ").append(line).append("\n"));
+        content.append("\n");
       }
     }
 
-    String quoted = quotedContent.toString().trim();
+    String quoted = content.toString().trim();
     if (!quoted.isEmpty()) {
-      TeamsMessage.TextBlock textBlock = createTextBlock(quoted, null, 0, false);
-      TeamsMessage.Container quoteContainer =
+      body.add(
           TeamsMessage.Container.builder()
               .type("Container")
               .style("emphasis")
-              .items(List.of(textBlock))
-              .build();
-      body.add(quoteContainer);
+              .items(List.of(createTextBlock(quoted, null, 0)))
+              .build());
     }
   }
 
   @Override
-  public void visit(BulletList bulletList) {
+  public void visit(FencedCodeBlock block) {
+    addCodeBlock(block.getLiteral());
+  }
+
+  @Override
+  public void visit(IndentedCodeBlock block) {
+    addCodeBlock(block.getLiteral());
+  }
+
+  @Override
+  public void visit(ThematicBreak breakNode) {
     flushCurrentText();
-    inList = true;
-    appendListWithTables(bulletList, 0, null);
-    inList = false;
+    body.add(TeamsMessage.TextBlock.builder().type("TextBlock").separator(true).build());
   }
 
   @Override
-  public void visit(OrderedList orderedList) {
-    flushCurrentText();
-    inList = true;
-    appendListWithTables(orderedList, 0, orderedList.getMarkerStartNumber());
-    inList = false;
+  public void visit(CustomBlock block) {
+    if (block instanceof TableBlock table) processTable(table);
+    else super.visit(block);
+  }
+
+  // --- List Visitors ---
+
+  @Override
+  public void visit(BulletList list) {
+    processList(list, 0, null);
   }
 
   @Override
-  public void visit(ListItem listItem) {
-    visitChildren(listItem);
+  public void visit(OrderedList list) {
+    processList(list, 0, list.getMarkerStartNumber());
   }
 
   @Override
-  public void visit(FencedCodeBlock codeBlock) {
-    flushCurrentText();
-    String code = codeBlock.getLiteral();
-    if (code != null && !code.isEmpty()) {
-      TeamsMessage.TextBlock textBlock =
-          TeamsMessage.TextBlock.builder()
-              .type("TextBlock")
-              .text(truncateContent(code))
-              .wrap(true)
-              .fontType("Monospace")
-              .separator(true)
-              .build();
-      body.add(textBlock);
-    }
+  public void visit(ListItem item) {
+    visitChildren(item);
+  }
+
+  // --- Inline Visitors (Accumulate to currentText) ---
+
+  @Override
+  public void visit(Text text) {
+    currentText.append(text.getLiteral());
   }
 
   @Override
-  public void visit(IndentedCodeBlock codeBlock) {
-    flushCurrentText();
-    String code = codeBlock.getLiteral();
-    if (code != null && !code.isEmpty()) {
-      TeamsMessage.TextBlock textBlock =
-          TeamsMessage.TextBlock.builder()
-              .type("TextBlock")
-              .text(truncateContent(code))
-              .wrap(true)
-              .fontType("Monospace")
-              .separator(true)
-              .build();
-      body.add(textBlock);
-    }
-  }
-
-  @Override
-  public void visit(ThematicBreak thematicBreak) {
-    flushCurrentText();
-    TeamsMessage.TextBlock separator =
-        TeamsMessage.TextBlock.builder()
-            .type("TextBlock")
-            .text("")
-            .wrap(false)
-            .separator(true)
-            .build();
-    body.add(separator);
-  }
-
-  @Override
-  public void visit(SoftLineBreak softLineBreak) {
+  public void visit(SoftLineBreak breakNode) {
     currentText.append("\n");
   }
 
   @Override
-  public void visit(HardLineBreak hardLineBreak) {
+  public void visit(HardLineBreak breakNode) {
     currentText.append("\n");
   }
 
-  public void visit(Strikethrough strikethrough) {
-    currentText.append("~~");
-    visitChildren(strikethrough);
-    currentText.append("~~");
+  @Override
+  public void visit(Emphasis em) {
+    wrapText("*", em);
   }
 
-  private void visitTable(TableBlock table) {
+  @Override
+  public void visit(StrongEmphasis em) {
+    wrapText("**", em);
+  }
+
+  @Override
+  public void visit(Code code) {
+    currentText.append("`").append(code.getLiteral()).append("`");
+  }
+
+  @Override
+  public void visit(CustomNode node) {
+    if (node instanceof Strikethrough s) wrapText("~~", s);
+    else super.visit(node);
+  }
+
+  @Override
+  public void visit(Link link) {
+    int before = currentText.length();
+    visitChildren(link);
+    String label = currentText.substring(before).trim();
+    currentText.setLength(before); // Reset to capture label cleanly
+
+    String url = link.getDestination();
+    if (!isAllowedLinkUrl(url)) {
+      if (!label.isEmpty()) currentText.append(escapeMdLabel(label));
+    } else {
+      String safeLabel = label.isEmpty() ? escapeMdUrl(url) : escapeMdLabel(label);
+      currentText.append("[").append(safeLabel).append("](").append(escapeMdUrl(url)).append(")");
+    }
+  }
+
+  // --- Core Processing Logic ---
+
+  private void processList(Node list, int indent, Integer startNum) {
     flushCurrentText();
+    inList = true;
 
-    List<String> headers = new ArrayList<>();
-    List<List<String>> bodyRows = new ArrayList<>();
+    int index = (startNum == null) ? 1 : Math.max(1, startNum);
+    String padding = "  ".repeat(indent);
 
-    for (Node child = table.getFirstChild(); child != null; child = child.getNext()) {
-      if (child instanceof TableHead) {
-        for (Node row = child.getFirstChild(); row != null; row = row.getNext()) {
-          if (row instanceof TableRow) {
-            headers = extractTableRowCells((TableRow) row);
-            break;
-          }
-        }
-      } else if (child instanceof TableBody) {
-        for (Node row = child.getFirstChild(); row != null; row = row.getNext()) {
-          if (row instanceof TableRow) {
-            bodyRows.add(extractTableRowCells((TableRow) row));
-          }
-        }
+    for (Node node = list.getFirstChild(); node != null; node = node.getNext()) {
+      if (!(node instanceof ListItem li)) continue;
+
+      // 1. Separate Table from Text in this List Item
+      TableBlock table = findChild(li, TableBlock.class).orElse(null);
+      String itemText = renderListItemText(li);
+
+      // 2. Render Text Part
+      if (!itemText.isEmpty()) {
+        String bullet = (startNum == null) ? "- " : index + ". ";
+        flushLine(padding + bullet + itemText);
+      }
+
+      // 3. Render Table Part (if exists)
+      if (table != null) {
+        flushCurrentText(); // Ensure text is out before table
+        processTable(table);
+      }
+
+      if (startNum != null) index++;
+
+      // 4. Handle Nested Lists
+      for (Node child = li.getFirstChild(); child != null; child = child.getNext()) {
+        if (child instanceof BulletList bl) processList(bl, indent + 1, null);
+        else if (child instanceof OrderedList ol)
+          processList(ol, indent + 1, ol.getMarkerStartNumber());
       }
     }
 
-    if (headers.isEmpty() && bodyRows.isEmpty()) return;
+    flushCurrentText();
+    inList = false;
+  }
 
-    int colCount = headers.size();
-    for (List<String> row : bodyRows) colCount = Math.max(colCount, row.size());
+  private void processTable(TableBlock tableBlock) {
+    flushCurrentText();
+    TableData data = extractTableData(tableBlock);
+    if (data.isEmpty()) return;
 
-    if (colCount == 0) return;
+    int totalRecords = data.rows.size();
 
-    if (headers.isEmpty()) {
-      headers = new ArrayList<>();
-      for (int i = 0; i < colCount; i++) {
-        headers.add("Column " + (i + 1));
-      }
-    }
-
-    int totalRecords = bodyRows.size();
-
-    // Only show summary header when there are multiple records
+    // Header Summary
     if (totalRecords > 1) {
       body.add(
           TeamsMessage.TextBlock.builder()
               .type("TextBlock")
               .text(String.format("📋 %d records", totalRecords))
-              .wrap(true)
               .weight("Bolder")
               .spacing("Medium")
+              .wrap(true)
               .build());
     }
 
-    // Add each record as a transposed table
-    for (int i = 0; i < bodyRows.size(); i++) {
-      body.add(buildRecordTable(headers, bodyRows.get(i), i + 1, totalRecords > 1, i > 0));
+    // Render Rows (Transposed for Mobile/Card View)
+    for (int i = 0; i < totalRecords; i++) {
+      boolean showHeader = totalRecords > 1;
+      boolean addSpacing = i > 0 || !showHeader;
+      body.add(
+          buildTransposedRecord(data.headers, data.rows.get(i), i + 1, showHeader, addSpacing));
     }
   }
 
-  private TeamsMessage.Table buildRecordTable(
-      List<String> headers,
-      List<String> record,
-      int recordNumber,
-      boolean showRecordNumber,
-      boolean addSpacing) {
-    List<TeamsMessage.TableColumnDefinition> columns =
-        List.of(
-            TeamsMessage.TableColumnDefinition.builder().width("auto").build(),
-            TeamsMessage.TableColumnDefinition.builder().width("stretch").build());
+  private void addCodeBlock(String literal) {
+    flushCurrentText();
+    if (literal != null && !literal.isEmpty()) {
+      body.add(
+          TeamsMessage.TextBlock.builder()
+              .type("TextBlock")
+              .text(truncate(literal))
+              .wrap(true)
+              .fontType("Monospace")
+              .separator(true)
+              .build());
+    }
+  }
 
+  // --- Helpers: Table Construction ---
+
+  private TeamsMessage.Table buildTransposedRecord(
+      List<String> headers, List<String> row, int recordNum, boolean showHeader, boolean spacing) {
     List<TeamsMessage.TableRow> tableRows = new ArrayList<>();
 
-    // Only show header row with record number when there are multiple records
-    if (showRecordNumber) {
-      tableRows.add(
-          TeamsMessage.TableRow.builder()
-              .type("TableRow")
-              .cells(
-                  List.of(
-                      buildTableCell("📋 Record " + recordNumber, true), buildTableCell("", false)))
-              .build());
+    if (showHeader) {
+      tableRows.add(createRow("📋 Record " + recordNum, "", true));
     }
 
-    // Key-value rows
     for (int i = 0; i < headers.size(); i++) {
-      String field = headers.get(i);
-      String value = i < record.size() && record.get(i) != null ? record.get(i) : "";
-
-      // Truncate long values
-      if (value.length() > 60) {
-        value = value.substring(0, 57) + "…";
-      }
-
-      tableRows.add(
-          TeamsMessage.TableRow.builder()
-              .type("TableRow")
-              .cells(List.of(buildTableCell(field, true), buildTableCell(value, false)))
-              .build());
+      String val = (i < row.size() && row.get(i) != null) ? row.get(i) : "";
+      if (val.length() > 60) val = val.substring(0, 57) + "…";
+      tableRows.add(createRow(headers.get(i), val, false));
     }
 
-    TeamsMessage.Table.TableBuilder tableBuilder =
+    TeamsMessage.Table.TableBuilder builder =
         TeamsMessage.Table.builder()
             .type("Table")
             .gridStyle("accent")
-            .firstRowAsHeader(showRecordNumber)
-            .columns(columns)
+            .firstRowAsHeader(showHeader)
+            .columns(
+                List.of(
+                    TeamsMessage.TableColumnDefinition.builder().width("auto").build(),
+                    TeamsMessage.TableColumnDefinition.builder().width("stretch").build()))
             .rows(tableRows);
 
-    if (addSpacing) {
-      tableBuilder.spacing("Medium");
-    } else {
-      // Add spacing before first table for visual separation from list
-      tableBuilder.spacing("Medium");
-    }
-
-    return tableBuilder.build();
+    if (spacing) builder.spacing("Medium");
+    return builder.build();
   }
 
-  private TeamsMessage.TableCell buildTableCell(String text, boolean bold) {
-    TeamsMessage.TextBlock.TextBlockBuilder textBuilder =
-        TeamsMessage.TextBlock.builder().type("TextBlock").text(text).wrap(true);
-
-    if (bold) {
-      textBuilder.weight("Bolder");
-    }
-
-    return TeamsMessage.TableCell.builder()
-        .type("TableCell")
-        .items(List.of(textBuilder.build()))
+  private TeamsMessage.TableRow createRow(String col1, String col2, boolean isHeader) {
+    return TeamsMessage.TableRow.builder()
+        .type("TableRow")
+        .cells(List.of(createCell(col1, true), createCell(col2, false)))
         .build();
   }
 
-  private String formatTableForList(TableBlock table) {
+  private TeamsMessage.TableCell createCell(String text, boolean bold) {
+    TeamsMessage.TextBlock.TextBlockBuilder txt =
+        TeamsMessage.TextBlock.builder().type("TextBlock").text(text).wrap(true);
+    if (bold) txt.weight("Bolder");
+    return TeamsMessage.TableCell.builder().type("TableCell").items(List.of(txt.build())).build();
+  }
+
+  private TableData extractTableData(TableBlock table) {
     List<String> headers = new ArrayList<>();
-    List<List<String>> bodyRows = new ArrayList<>();
+    List<List<String>> rows = new ArrayList<>();
 
     for (Node child = table.getFirstChild(); child != null; child = child.getNext()) {
-      if (child instanceof TableHead) {
-        for (Node row = child.getFirstChild(); row != null; row = row.getNext()) {
-          if (row instanceof TableRow) {
-            headers = extractTableRowCells((TableRow) row);
-            break;
-          }
-        }
-      } else if (child instanceof TableBody) {
-        for (Node row = child.getFirstChild(); row != null; row = row.getNext()) {
-          if (row instanceof TableRow) {
-            bodyRows.add(extractTableRowCells((TableRow) row));
-          }
+      if (child instanceof TableHead head) {
+        findChild(head, TableRow.class).ifPresent(r -> headers.addAll(extractCells(r)));
+      } else if (child instanceof TableBody body) {
+        for (Node row = body.getFirstChild(); row != null; row = row.getNext()) {
+          if (row instanceof TableRow r) rows.add(extractCells(r));
         }
       }
     }
 
-    if (headers.isEmpty() && bodyRows.isEmpty()) return "";
+    if (headers.isEmpty() && rows.isEmpty()) return new TableData(List.of(), List.of());
 
-    int colCount = headers.size();
-    for (List<String> row : bodyRows) colCount = Math.max(colCount, row.size());
-
-    if (colCount == 0) return "";
+    // Normalize headers
+    int maxCols = rows.stream().mapToInt(List::size).max().orElse(headers.size());
 
     if (headers.isEmpty()) {
-      headers = new ArrayList<>();
-      for (int i = 0; i < colCount; i++) {
-        headers.add("Column " + (i + 1));
-      }
+      // FIX: Add to the existing list instead of reassigning the variable
+      IntStream.range(0, maxCols).mapToObj(i -> "Column " + (i + 1)).forEach(headers::add);
     }
 
-    return formatTableAsText(headers, bodyRows, colCount);
+    return new TableData(headers, rows);
   }
 
-  private String formatTableAsText(List<String> headers, List<List<String>> rows, int colCount) {
-    StringBuilder text = new StringBuilder();
-
-    // Calculate max key length for alignment (monospace font will be used)
-    int maxKeyLength = headers.stream().mapToInt(String::length).max().orElse(0);
-
-    // Use markdown code fence for proper code block styling inside lists
-    text.append("\n```\n");
-
-    for (int rowIdx = 0; rowIdx < rows.size(); rowIdx++) {
-      List<String> row = rows.get(rowIdx);
-
-      // Record header with separator line
-      text.append("📋 Record ").append(rowIdx + 1).append("\n");
-      text.append("-".repeat(Math.min(40, maxKeyLength + 20))).append("\n");
-
-      // Key-value pairs with space alignment (works with monospace)
-      for (int i = 0; i < colCount; i++) {
-        String key = i < headers.size() ? headers.get(i) : "Column " + (i + 1);
-        String value = i < row.size() && row.get(i) != null ? row.get(i) : "";
-
-        // Truncate long values
-        if (value.length() > 60) {
-          value = value.substring(0, 57) + "…";
-        }
-
-        text.append(String.format("%-" + maxKeyLength + "s : %s", key, value)).append("\n");
-      }
-
-      // Separator between records
-      if (rowIdx < rows.size() - 1) {
-        text.append("\n");
-      }
-    }
-
-    text.append("```");
-
-    return text.toString();
-  }
-
-  private List<String> extractTableRowCells(TableRow row) {
+  private List<String> extractCells(TableRow row) {
     List<String> cells = new ArrayList<>();
-    for (Node cell = row.getFirstChild(); cell != null; cell = cell.getNext()) {
-      if (cell instanceof TableCell) {
-        String text = inline.renderInlineChildren(cell).trim();
-        cells.add(text.replace("\n", " "));
+    for (Node c = row.getFirstChild(); c != null; c = c.getNext()) {
+      if (c instanceof TableCell) {
+        cells.add(INLINE_FORMATTER.renderInlineChildren(c).trim().replace("\n", " "));
       }
     }
     return cells;
   }
 
-  void flushCurrentText() {
-    if (!currentText.isEmpty()) {
-      String text = currentText.toString().trim();
-      if (!text.isEmpty()) {
-        // Split on newlines to create separate TextBlocks for line breaks
-        String[] lines = text.split("\\n+");
-        for (String line : lines) {
-          String trimmed = line.trim();
-          if (!trimmed.isEmpty()) {
-            body.add(createTextBlock(trimmed, null, 0, false));
-          }
-        }
+  // --- Helpers: Text & Structure ---
+
+  private void flushCurrentText() {
+    if (currentText.isEmpty()) return;
+    String text = currentText.toString().trim();
+    if (!text.isEmpty()) {
+      for (String line : text.split("\\n+")) {
+        if (!line.trim().isEmpty()) body.add(createTextBlock(line.trim(), null, 0));
       }
-      currentText.setLength(0);
     }
+    currentText.setLength(0);
   }
 
-  TeamsMessage.TextBlock createTextBlock(String text, String style, int size, boolean isSubtle) {
+  private void flushLine(String line) {
+    currentText.append(line).append("\n");
+    flushCurrentText();
+  }
+
+  private TeamsMessage.TextBlock createTextBlock(String text, String style, int size) {
     TeamsMessage.TextBlock.TextBlockBuilder builder =
-        TeamsMessage.TextBlock.builder()
-            .type("TextBlock")
-            .text(truncateContent(text == null ? "" : text))
-            .wrap(true);
-
+        TeamsMessage.TextBlock.builder().type("TextBlock").text(truncate(text)).wrap(true);
     if ("heading".equals(style)) {
-      switch (size) {
-        case 1:
-          builder.size("ExtraLarge").weight("Bolder");
-          break;
-        case 2:
-          builder.size("Large").weight("Bolder");
-          break;
-        case 3:
-          builder.size("Medium").weight("Bolder");
-          break;
-        default:
-          builder.size("Default").weight("Bolder");
-      }
+      builder.weight("Bolder");
+      builder.size(
+          switch (size) {
+            case 1 -> "ExtraLarge";
+            case 2 -> "Large";
+            case 3 -> "Medium";
+            default -> "Default";
+          });
     }
-
     return builder.build();
   }
 
-  private String renderListItemInlineOnly(ListItem li) {
+  private void wrapText(String wrapper, Node node) {
+    currentText.append(wrapper);
+    visitChildren(node);
+    currentText.append(wrapper);
+  }
+
+  private String renderListItemText(ListItem li) {
     StringBuilder sb = new StringBuilder();
     boolean first = true;
     for (Node c = li.getFirstChild(); c != null; c = c.getNext()) {
-      if (c instanceof BulletList || c instanceof OrderedList) continue;
-
-      String part;
-      if (c instanceof FencedCodeBlock) {
-        String code = ((FencedCodeBlock) c).getLiteral();
-        part = formatCodeForList(code);
-      } else if (c instanceof IndentedCodeBlock) {
-        String code = ((IndentedCodeBlock) c).getLiteral();
-        part = formatCodeForList(code);
-      } else if (c instanceof BlockQuote) {
-        part = formatBlockQuoteForList((BlockQuote) c);
-      } else if (c instanceof TableBlock) {
-        part = formatTableForList((TableBlock) c);
-      } else {
-        TeamsCardAssembler tempVisitor = new TeamsCardAssembler();
-        part = tempVisitor.inline.renderInlineChildren(c).trim();
-      }
-
-      if (part.isEmpty()) continue;
-
-      if (!first) {
-        if (c instanceof Paragraph
-            || c instanceof FencedCodeBlock
-            || c instanceof IndentedCodeBlock
-            || c instanceof BlockQuote
-            || c instanceof TableBlock) {
-          sb.append("\n");
-        } else {
-          sb.append(" ");
-        }
-      }
-      sb.append(part);
-      first = false;
-    }
-    return sb.toString();
-  }
-
-  private String formatCodeForList(String code) {
-    String body = code == null ? "" : code;
-    return truncateContent(body);
-  }
-
-  private String formatBlockQuoteForList(BlockQuote blockQuote) {
-    StringBuilder quotedContent = new StringBuilder();
-
-    // Process each child of the blockquote
-    for (Node child = blockQuote.getFirstChild(); child != null; child = child.getNext()) {
-      switch (child) {
-        case Paragraph paragraph -> {
-          String text = inline.renderInlineChildren(child).trim();
-          if (!text.isEmpty()) {
-            quotedContent.append("> ").append(text).append("\n");
-          }
-        }
-        case BulletList bulletList -> {
-          StringBuilder listText = new StringBuilder();
-          appendList(listText, child, 0, null);
-          // Prefix each line with "> " for blockquote
-          String[] lines = listText.toString().split("\n");
-          for (String line : lines) {
-            if (!line.trim().isEmpty()) {
-              quotedContent.append("> ").append(line).append("\n");
-            }
-          }
-        }
-        case OrderedList orderedList -> {
-          StringBuilder listText = new StringBuilder();
-          appendList(listText, child, 0, orderedList.getMarkerStartNumber());
-          // Prefix each line with "> " for blockquote
-          String[] lines = listText.toString().split("\n");
-          for (String line : lines) {
-            if (!line.trim().isEmpty()) {
-              quotedContent.append("> ").append(line).append("\n");
-            }
-          }
-        }
-        default -> {}
-      }
-    }
-
-    return quotedContent.toString().trim();
-  }
-
-  private void appendListWithTables(Node list, int indent, Integer start) {
-    StringBuilder listText = new StringBuilder();
-    int index = (start == null) ? 1 : Math.max(1, start);
-
-    for (Node liNode = list.getFirstChild(); liNode != null; liNode = liNode.getNext()) {
-      if (!(liNode instanceof ListItem li)) continue;
-
-      // Check if this list item contains a table
-      TableBlock tableInItem = findTableInListItem(li);
-
-      if (tableInItem != null) {
-        // Render text content before the table
-        String textPart = renderListItemTextOnly(li);
-        String pad = "  ".repeat(indent);
-
-        if (!textPart.isEmpty()) {
-          if (start == null) {
-            listText.append(pad).append("- ").append(textPart).append("\n");
-          } else {
-            listText.append(pad).append(index).append(". ").append(textPart).append("\n");
-          }
-        }
-
-        // Flush accumulated list text before rendering table
-        String out = listText.toString().trim();
-        if (!out.isEmpty()) {
-          body.add(createTextBlock(out, null, 0, false));
-          listText.setLength(0);
-        }
-
-        // Render the table as native Table element
-        renderTableBlock(tableInItem);
-      } else {
-        // No table - render normally
-        String row = renderListItemInlineOnly(li);
-        String pad = "  ".repeat(indent);
-
-        if (start == null) {
-          if (!row.isEmpty()) listText.append(pad).append("- ").append(row).append("\n");
-        } else {
-          if (!row.isEmpty())
-            listText.append(pad).append(index).append(". ").append(row).append("\n");
-        }
-      }
-
-      if (start != null) index++;
-
-      // Handle nested lists
-      for (Node c = li.getFirstChild(); c != null; c = c.getNext()) {
-        if (c instanceof BulletList || c instanceof OrderedList) {
-          // Flush current list text before nested list
-          String out = listText.toString().trim();
-          if (!out.isEmpty()) {
-            body.add(createTextBlock(out, null, 0, false));
-            listText.setLength(0);
-          }
-
-          if (c instanceof BulletList) {
-            appendListWithTables(c, indent + 1, null);
-          } else {
-            appendListWithTables(c, indent + 1, ((OrderedList) c).getMarkerStartNumber());
-          }
-        }
-      }
-    }
-
-    // Flush any remaining list text
-    String out = listText.toString().trim();
-    if (!out.isEmpty()) {
-      body.add(createTextBlock(out, null, 0, false));
-    }
-  }
-
-  private TableBlock findTableInListItem(ListItem li) {
-    for (Node c = li.getFirstChild(); c != null; c = c.getNext()) {
-      if (c instanceof TableBlock) {
-        return (TableBlock) c;
-      }
-    }
-    return null;
-  }
-
-  private String renderListItemTextOnly(ListItem li) {
-    StringBuilder sb = new StringBuilder();
-    boolean first = true;
-    for (Node c = li.getFirstChild(); c != null; c = c.getNext()) {
-      // Skip tables, nested lists
       if (c instanceof TableBlock || c instanceof BulletList || c instanceof OrderedList) continue;
 
-      String part;
-      if (c instanceof FencedCodeBlock) {
-        String code = ((FencedCodeBlock) c).getLiteral();
-        part = formatCodeForList(code);
-      } else if (c instanceof IndentedCodeBlock) {
-        String code = ((IndentedCodeBlock) c).getLiteral();
-        part = formatCodeForList(code);
-      } else if (c instanceof BlockQuote) {
-        part = formatBlockQuoteForList((BlockQuote) c);
-      } else {
-        TeamsCardAssembler tempVisitor = new TeamsCardAssembler();
-        part = tempVisitor.inline.renderInlineChildren(c).trim();
-      }
+      String text = renderNodeToText(c);
+      if (text.isEmpty()) continue;
 
-      if (part.isEmpty()) continue;
-
-      if (!first) {
-        sb.append(" ");
-      }
-      sb.append(part);
+      if (!first) sb.append(" ");
+      sb.append(text);
       first = false;
     }
     return sb.toString();
   }
 
-  private void renderTableBlock(TableBlock table) {
-    List<String> headers = new ArrayList<>();
-    List<List<String>> bodyRows = new ArrayList<>();
-
-    for (Node child = table.getFirstChild(); child != null; child = child.getNext()) {
-      if (child instanceof TableHead) {
-        for (Node row = child.getFirstChild(); row != null; row = row.getNext()) {
-          if (row instanceof TableRow) {
-            headers = extractTableRowCells((TableRow) row);
-            break;
-          }
-        }
-      } else if (child instanceof TableBody) {
-        for (Node row = child.getFirstChild(); row != null; row = row.getNext()) {
-          if (row instanceof TableRow) {
-            bodyRows.add(extractTableRowCells((TableRow) row));
-          }
-        }
-      }
-    }
-
-    if (headers.isEmpty() && bodyRows.isEmpty()) return;
-
-    int colCount = headers.size();
-    for (List<String> row : bodyRows) colCount = Math.max(colCount, row.size());
-
-    if (colCount == 0) return;
-
-    if (headers.isEmpty()) {
-      headers = new ArrayList<>();
-      for (int i = 0; i < colCount; i++) {
-        headers.add("Column " + (i + 1));
-      }
-    }
-
-    int totalRecords = bodyRows.size();
-
-    // Only show summary header when there are multiple records
-    if (totalRecords > 1) {
-      body.add(
-          TeamsMessage.TextBlock.builder()
-              .type("TextBlock")
-              .text(String.format("📋 %d records", totalRecords))
-              .wrap(true)
-              .weight("Bolder")
-              .spacing("Medium")
-              .build());
-    }
-
-    // Add each record as a transposed table
-    for (int i = 0; i < bodyRows.size(); i++) {
-      body.add(buildRecordTable(headers, bodyRows.get(i), i + 1, totalRecords > 1, i > 0));
-    }
+  // Renders a node to plain string (using inline formatter or specialized logic)
+  private String renderNodeToText(Node node) {
+    if (node instanceof FencedCodeBlock f) return truncate(f.getLiteral());
+    if (node instanceof IndentedCodeBlock i) return truncate(i.getLiteral());
+    // Recursively using inline formatter for standard nodes
+    return INLINE_FORMATTER.renderInlineChildren(node).trim();
   }
 
-  private void appendList(StringBuilder out, Node list, int indent, Integer start) {
-    int index = (start == null) ? 1 : Math.max(1, start);
-    for (Node liNode = list.getFirstChild(); liNode != null; liNode = liNode.getNext()) {
-      if (!(liNode instanceof ListItem li)) continue;
-
-      String row = renderListItemInlineOnly(li);
-      String pad = "  ".repeat(indent);
-
-      if (start == null) {
-        if (!row.isEmpty()) out.append(pad).append("- ").append(row).append("\n");
-      } else {
-        if (!row.isEmpty()) out.append(pad).append(index).append(". ").append(row).append("\n");
-        index++;
-      }
-
-      for (Node c = li.getFirstChild(); c != null; c = c.getNext()) {
-        if (c instanceof BulletList) appendList(out, c, indent + 1, null);
-        if (c instanceof OrderedList)
-          appendList(out, c, indent + 1, ((OrderedList) c).getMarkerStartNumber());
-      }
+  private <T> Optional<T> findChild(Node parent, Class<T> clazz) {
+    for (Node c = parent.getFirstChild(); c != null; c = c.getNext()) {
+      if (clazz.isInstance(c)) return Optional.of(clazz.cast(c));
     }
+    return Optional.empty();
+  }
+
+  // --- Helpers: Formatting ---
+
+  private String truncate(String s) {
+    if (s == null) return "";
+    return s.length() <= TEAMS_MAX_TEXT_LENGTH
+        ? s
+        : s.substring(0, TEAMS_MAX_TEXT_LENGTH - 3) + "…";
   }
 
   private static boolean isAllowedLinkUrl(String url) {
+    if (url == null) return false;
     try {
-      if (url == null) return false;
-      java.net.URI u = java.net.URI.create(url.trim());
-      String s = u.getScheme();
+      String s = URI.create(url.trim()).getScheme();
       return s != null
           && (s.equalsIgnoreCase("http")
               || s.equalsIgnoreCase("https")
               || s.equalsIgnoreCase("mailto"));
-    } catch (IllegalArgumentException ex) {
+    } catch (Exception e) {
       return false;
     }
   }
 
   private static String escapeMdLabel(String s) {
-    if (s == null || s.isEmpty()) return "";
-    return s.replace("[", "\\[").replace("]", "\\]").replace("(", "\\(").replace(")", "\\)");
+    return s == null
+        ? ""
+        : s.replace("[", "\\[").replace("]", "\\]").replace("(", "\\(").replace(")", "\\)");
   }
 
   private static String escapeMdUrl(String s) {
-    if (s == null || s.isEmpty()) return "";
-    return s.trim().replace(" ", "%20").replace(")", "%29").replace("(", "%28");
+    return s == null ? "" : s.trim().replace(" ", "%20").replace(")", "%29").replace("(", "%28");
   }
 
-  private String truncateContent(String content) {
-    if (content.length() <= TeamsCardAssembler.TEAMS_MAX_TEXT_LENGTH) {
-      return content;
+  private record TableData(List<String> headers, List<List<String>> rows) {
+    boolean isEmpty() {
+      return headers.isEmpty() && rows.isEmpty();
     }
-    return content.substring(0, TeamsCardAssembler.TEAMS_MAX_TEXT_LENGTH - 3) + "…";
   }
 }
